--- a/kpf/pictureframe.conf
+++ b/kpf/pictureframe.conf
@@ -6,13 +6,13 @@ pre-start script
     source /etc/upstart/functions
 
     if [ -e $SCRIPT ]; then
-        /bin/sh /mnt/us/kindle-picture-frame/scheduler.sh &
+        /bin/sh /mnt/us/kpf/scheduler.sh &
     fi
 
     true
 end script
 
 post-stop script
-    PID=`ps xa | grep "/bin/sh /mnt/us/kindle-picture-frame/scheduler.sh" | awk '{ print $1 }'`
+    PID=`ps xa | grep "/bin/sh /mnt/us/kpf/scheduler.sh" | awk '{ print $1 }'`
     kill $PID || true
 end script
